--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@supabase/auth-helpers-nextjs": "^0.7.2",
+    "@supabase/auth-helpers-react": "^0.4.0",
     "@types/node": "20.3.1",
     "@types/react": "18.2.12",
     "@types/react-dom": "18.2.5",
@@ -23,11 +25,15 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.9.0",
     "react-spinners": "^0.13.8",
+    "stripe": "^12.9.0",
     "tailwind-merge": "^1.13.1",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3",
     "uniqid": "^5.4.0",
     "use-sound": "^4.0.1",
     "zustand": "^4.3.8"
+  },
+  "devDependencies": {
+    "supabase": "^1.68.6"
   }
 }
