--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-hook-form": "^7.44.3",
+    "react-hook-form": "^7.45.2",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.9.0",
     "react-spinners": "^0.13.8",
@@ -37,6 +37,7 @@
     "zustand": "^4.3.8"
   },
   "devDependencies": {
+    "@types/uniqid": "^5.3.2",
     "supabase": "^1.68.6"
   }
 }
